feature: Aggiunta del service

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -2,4 +2,5 @@
 <div class="container-fluid mt-3 mb-3">
  <!-- Contenuto principale -->
 </div>
+<app-movie-list></app-movie-list>
 <router-outlet></router-outlet>
